Most booking UI changes done.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -323,11 +323,11 @@
 		"prefer-not-to-say": "Prefer not to say",
 		"Other": "Other"
 	},
-	"paymentMethods_FINANCIAL_APPROVER_information": "Financial approval - when prompted please select an approver to confirm your booking. To find out whether your organisation uses the financial approver process, please contact your learning and development team. They should be able to confirm the name of your financial approver.",
+	"paymentMethods_FINANCIAL_APPROVER_heading": "Financial approver",
 	"paymentMethods_FINANCIAL_APPROVER_label": "Financial approver email address",
 	"paymentMethods_FINANCIAL_APPROVER_type": "Financial approver",
-	"paymentMethods_PURCHASE_ORDER_information": "Purchase order - you will need to have a valid purchase order number from your finance team to complete this booking. To request a PO number, you will need the provider name and cost from the course description.",
-	"paymentMethods_PURCHASE_ORDER_label": "Purchase order number",
+	"paymentMethods_PURCHASE_ORDER_heading": "Purchase order (PO)",
+	"paymentMethods_PURCHASE_ORDER_label": "Enter PO number",
 	"paymentMethods_PURCHASE_ORDER_type": "Purchase order",
 	"REQUESTED": "Requested",
 	"CANCELLED": "Cancelled",
