--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -355,5 +355,8 @@
 	"REQUESTED": "Requested",
 	"CANCELLED": "Cancelled",
 	"Cost": "Cost",
-	"SKIPPED": "Skipped"
+	"SKIPPED": "Skipped",
+	"blog": "blog",
+	"": "",
+	"unknown": "unknown"
 }
