LPFG-656: Changed youtube video location to url

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -355,5 +355,6 @@
 	"REQUESTED": "Requested",
 	"CANCELLED": "Cancelled",
 	"Cost": "Cost",
-	"SKIPPED": "Skipped"
+	"SKIPPED": "Skipped",
+	"unknown": "unknown"
 }
