changes to profile and suggestions pages

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -29,8 +29,8 @@
 	"Product code": "Product code",
 	"proposition_name": "Civil Service Learning",
 	"home_page_title": "Your learning",
-	"required_section_title": "Required learning",
-	"other_section_title": "Other learning",
+	"required_section_title": "Required learning from your organisation",
+	"other_section_title": "Your learning plan",
 	"home_page_suggestions": "Tailored suggestions from %s, your area of work or your organisation.",
 	"home_page_learning_plan_link": "See more learning in your Learning plan",
 	"home_page_suggestions_link": "See more suggestions for you",
