suggestions for you changes

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -357,5 +357,6 @@
 	"SKIPPED": "Skipped",
 	"blog": "blog",
 	"": "",
-	"unknown": "unknown"
+	"unknown": "unknown",
+	"otherAreaOfWork": "otherAreaOfWork"
 }
