fixed capitalisation bug

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -64,7 +64,7 @@
 	"profile_email_label": "Email",
 	"profile_password_label": "Password",
 	"profile_department_label": "Organisation",
-	"profile_line-manager_label": "Line Manager email",
+	"profile_line-manager_label": "Line manager email",
 	"profile_area_label": "Area of work",
 	"profile_grade_label": "Grade",
 	"profile_given-name_label": "Name",
@@ -314,9 +314,9 @@
 		"passwordUnmatched": "Password does not match the confirmation.",
 		"passwordLength": "Password length should be at least 8 characters.",
 		"passwordNotMetReq": "Password did not meet requirements",
-		"lineManagerConfirmation": "Line Manager Email does not match the confirmation.",
-		"lineManagerInvalid": "Line Manager Email is not valid",
-		"lineManagerMissing": "Line Manager Email does not exist",
+		"lineManagerConfirmation": "Line manager email does not match the confirmation.",
+		"lineManagerInvalid": "Line manager email is not valid",
+		"lineManagerMissing": "Line manager email does not exist",
 		"lineManagerIsUser": "You may not be your own line manager",
 		"po-empty": "Enter a purchase order number",
 		"po-too-short": "A purchase order number must be longer than 2 characters",
