--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -99,7 +99,7 @@
 	"register_organisation_error_none_selected": "Your organisation does not appear to be valid",
 	"register_organisation_error_label": "Select your organisation",
 	"register_area_page_title": "Your area of work",
-	"register_area_page_intro": "Select all the areas of work that are relevant to your job.",
+	"register_area_page_intro": "Select the area of work that are relevant to your job.",
 	"register_area_error_title": "There was a problem with your information",
 	"register_area_error_none_selected": "You must select at least one area of work",
 	"register_area_other_label": "Please clarify",
