--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -358,5 +358,6 @@
 	"blog": "blog",
 	"": "",
 	"unknown": "unknown",
-	"otherAreaOfWork": "otherAreaOfWork"
+	"otherAreaOfWork": "otherAreaOfWork",
+	"Costs": "Costs"
 }
