--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -158,29 +158,29 @@
 	"top_nav_profile": "Profile",
 	"blended": "Blended",
 	"BOOKED": "BOOKED",
-	"AA": "Administrative Assistant",
-	"AO": "Administrative Officer",
-	"EO": "Executive Officer",
+	"AA": "Administrative assistant",
+	"AO": "Administrative officer",
+	"EO": "Executive officer",
 	"G6": "Grade 6",
 	"G7": "Grade 7",
-	"HEO": "Higher Executive Officer",
-	"SEO": "Senior Executive Officer",
-	"PB1": "Senior Civil Service - Deputy Director",
+	"HEO": "Higher executive officer",
+	"SEO": "Senior executive officer",
+	"PB1": "Senior Civil Service - Deputy director",
 	"PB2": "Senior Civil Service - Director",
-	"PB3": "Senior Civil Service - Director General",
-	"PS": "Senior Civil Service - Permanent Secretary",
+	"PB3": "Senior Civil Service - Director general",
+	"PS": "Senior Civil Service - Permanent secretary",
 	"grades": {
-		"AA": "Administrative Assistant",
-		"AO": "Administrative Officer",
-		"EO": "Executive Officer",
+		"AA": "Administrative assistant",
+		"AO": "Administrative officer",
+		"EO": "Executive officer",
 		"G6": "Grade 6",
 		"G7": "Grade 7",
-		"HEO": "Higher Executive Officer",
-		"SEO": "Senior Executive Officer",
-		"PB1": "Senior Civil Service - Deputy Director",
+		"HEO": "Higher executive officer",
+		"SEO": "Senior executive officer",
+		"PB1": "Senior Civil Service - Deputy director",
 		"PB2": "Senior Civil Service - Director",
-		"PB3": "Senior Civil Service - Director General",
-		"PS": "Senior Civil Service - Permanent Secretary"
+		"PB3": "Senior Civil Service - Director general",
+		"PS": "Senior Civil Service - Permanent secretary"
 	},
 	"interest": {
 		"contract-management": "Contract management",
