--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -357,5 +357,6 @@
 	"profile_line-manager": "profile_line-manager",
 	"line-manager": "line-manager",
 	"department": "department",
-	"grade": "grade"
+	"grade": "grade",
+	"other-areas-of-work": "other-areas-of-work"
 }
