--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -158,29 +158,29 @@
 	"top_nav_profile": "Profile",
 	"blended": "Blended",
 	"BOOKED": "BOOKED",
-	"AA": "Administrative assistant",
-	"AO": "Administrative officer",
-	"EO": "Executive officer",
+	"AA": "Administrative Assistant",
+	"AO": "Administrative Officer",
+	"EO": "Executive Officer",
 	"G6": "Grade 6",
 	"G7": "Grade 7",
-	"HEO": "Higher executive officer",
-	"SEO": "Senior executive officer",
-	"PB1": "SCS - deputy director",
-	"PB2": "SCS - director",
-	"PB3": "SCS - director general",
-	"PS": "SCS - permanent secretary",
+	"HEO": "Higher Executive Officer",
+	"SEO": "Senior Executive Officer",
+	"PB1": "Senior Civil Service - Deputy Director",
+	"PB2": "Senior Civil Service - Director",
+	"PB3": "Senior Civil Service - Director General",
+	"PS": "Senior Civil Service - Permanent Secretary",
 	"grades": {
-		"AA": "Administrative assistant",
-		"AO": "Administrative officer",
-		"EO": "Executive officer",
+		"AA": "Administrative Assistant",
+		"AO": "Administrative Officer",
+		"EO": "Executive Officer",
 		"G6": "Grade 6",
 		"G7": "Grade 7",
-		"HEO": "Higher executive officer",
-		"SEO": "Senior executive officer",
-		"PB1": "SCS - deputy director",
-		"PB2": "SCS - director",
-		"PB3": "SCS - director general",
-		"PS": "SCS - permanent secretary"
+		"HEO": "Higher Executive Officer",
+		"SEO": "Senior Executive Officer",
+		"PB1": "Senior Civil Service - Deputy Director",
+		"PB2": "Senior Civil Service - Director",
+		"PB3": "Senior Civil Service - Director General",
+		"PS": "Senior Civil Service - Permanent Secretary"
 	},
 	"interest": {
 		"contract-management": "Contract management",
@@ -260,7 +260,6 @@
 	"learning_confirm_move_yes_option": "Yes, add it",
 	"learning_confirm_move_no_option": "No",
 	"learning_skipped_title": "%s",
-	"learning_removed_from_suggestions": "This has been removed from your suggested courses.",
 	"learning_skipped_from_plan_message": "This has been removed from your learning plan",
 	"learning_removed_from_plan_message": "This has been removed from your learning plan",
 	"feedback_content_title": "Content",
@@ -355,9 +354,5 @@
 	"": "",
 	"unknown": "unknown",
 	"otherAreaOfWork": "otherAreaOfWork",
-	"profile_line-manager": "profile_line-manager",
-	"line-manager": "line-manager",
-	"department": "department",
-	"grade": "grade",
-	"other-areas-of-work": "other-areas-of-work"
+	"department": "department"
 }
