--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -356,5 +356,5 @@
 	"otherAreaOfWork": "otherAreaOfWork",
 	"department": "department",
 	"primary-area-of-work": "primary-area-of-work",
-	"learning_removed_from_suggestions": "learning removed from suggestions"
+	"learning_removed_from_suggestions": "This has been removed from your suggested courses."
 }
