--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -357,7 +357,5 @@
 	"department": "department",
 	"primary-area-of-work": "primary-area-of-work",
 	"learning_removed_from_suggestions": "This has been removed from your suggested courses.",
-	"other-areas-of-work": "other-areas-of-work",
-	"paymentMethods_undefined_type": "paymentMethods_undefined_type",
-	"paymentMethods__type": "paymentMethods__type"
+	"other-areas-of-work": "other-areas-of-work"
 }
