--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -358,6 +358,7 @@
 	"primary-area-of-work": "primary-area-of-work",
 	"learning_removed_from_suggestions": "This has been removed from your suggested courses.",
 	"other-areas-of-work": "other-areas-of-work",
+    "Commercial": "Commercial",
 	"given-name": "given-name",
 	"profile": {
 		"lineManager": {
