--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -350,5 +350,6 @@
 	"primary-area-of-work": "primary-area-of-work",
 	"learning_removed_from_suggestions": "This has been removed from your suggested courses.",
 	"other-areas-of-work": "other-areas-of-work",
-	"given-name": "given-name"
+	"given-name": "given-name",
+	"grade": "grade"
 }
