LC-139: map approved to confirmed in en.json

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -17,7 +17,7 @@
 	"diversity-and-equality": "Diversity and equality",
 	"face-to-face": "Face to face",
 	"link": "Link",
-	"APPROVED": "Approved",
+	"APPROVED": "Confirmed",
 	"REGISTERED": "Requested",
 	"UNREGISTERED": "Cancelled",
 	"Duration": "Duration",
