added new header

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -305,7 +305,9 @@
 		"video": "Video"
 	},
 	"errors": {
-		"profileErrorEmpty": "Fields cannot be empty",
+		"profileErrorEmpty": {
+			"primary-area-of-work": "Fields cannot be empty"
+		},
 		"passwordUnmatched": "Password does not match the confirmation.",
 		"passwordLength": "Password length should be at least 8 characters.",
 		"passwordNotMetReq": "Password did not meet requirements",
