--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -373,12 +373,42 @@
 		"department": "Organisation is required",
 		"given-name": "Your name is required",
 		"other-areas-of-work": "Your other areas of work are required",
-		"interest": "Your interests are required"
+		"interest": "Your interests are required",
+		"line-manager": "profile.line-manager"
 	},
 	"profile_undefined_label": "profile_undefined_label",
 	"undefined": "undefined",
 	"line-manager": "line-manager",
 	"other-areas-of-work": "other-areas-of-work",
 	"Commercial": "Commercial",
-	"profile_primary-area-of-work": "profile_primary-area-of-work"
+	"profile_primary-area-of-work": "profile_primary-area-of-work",
+	"Associate Commercial Specialist": "Associate Commercial Specialist",
+	"Policy": "Policy",
+	"Commercial Support": "Commercial Support",
+	"Associate Commercial Practitioner": "Associate Commercial Practitioner",
+	"Commercial Lead": "Commercial Lead",
+	"Legal": "Legal",
+	"Commercial Strategy": "Commercial Strategy",
+	"Digital": "Digital",
+	"Market Maker & Supplier Engagement": "Market Maker & Supplier Engagement",
+	"Fraud, error, debt and grants": "Fraud, error, debt and grants",
+	"Strategy and Policy Development": "Strategy and Policy Development",
+	"Project delivery": "Project delivery",
+	"Property": "Property",
+	"Procurement": "Procurement",
+	"Category Management": "Category Management",
+	"Operational delivery": "Operational delivery",
+	"Commercial Practitioner": "Commercial Practitioner",
+	"Internal audit": "Internal audit",
+	"Finance": "Finance",
+	"Commercial Risk and Assurance Specialist": "Commercial Risk and Assurance Specialist",
+	"Communications": "Communications",
+	"Corporate finance": "Corporate finance",
+	"Commercial Specialist": "Commercial Specialist",
+	"Commercial Policy Advisor": "Commercial Policy Advisor",
+	"Senior Commercial Specialist": "Senior Commercial Specialist",
+	"Business Needs and Sourcing": "Business Needs and Sourcing",
+	"Analysis": "Analysis",
+	"Contract and Supplier Management": "Contract and Supplier Management",
+	"Human resources": "Human resources"
 }
