this includes the changes that happen when the user become active after being inactive. There is a function that checks if the organisaiton entered by the user is a tokenized one or not and based on that it directs the user to the enter token page where the user enters a token and then there is another check for the entered token

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -373,7 +373,8 @@
 		"department": "Organisation is required",
 		"given-name": "Your name is required",
 		"other-areas-of-work": "Your other areas of work are required",
-		"interest": "Your interests are required"
+		"interest": "Your interests are required",
+		"line-manager": "profile.line-manager"
 	},
 	"profile_undefined_label": "profile_undefined_label",
 	"undefined": "undefined",
