added back missing field in en.json

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -379,5 +379,6 @@
 	"undefined": "undefined",
 	"line-manager": "line-manager",
 	"other-areas-of-work": "other-areas-of-work",
-	"Commercial": "Commercial"
+	"Commercial": "Commercial",
+	"profile_primary-area-of-work": "profile_primary-area-of-work"
 }
