--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -319,7 +319,8 @@
 		"po-special-characters": "A purchase order should not contain dots (.), colons ( : ), or hashes ( # )",
 		"cancelBooking": "There was an error cancelling your booking request. Please try again.",
 		"registrationNotFound": "You attempted to cancel a booking you were not registered.",
-		"empty-payment-method": "Please enter your payment details."
+		"empty-payment-method": "Please enter your payment details.",
+		"empty-organisation": "Organisation is required"
 	},
 	"courseResult": {
 		"complete": "Course complete",
