--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -311,7 +311,7 @@
 		"passwordNotMetReq": "Password did not meet requirements",
 		"lineManagerConfirmation": "Line manager email address confirmation does not match. \n\n Check that the same email address is entered in both boxes.",
 		"lineManagerInvalid": "Line manager email address is not in the correct format. \n\n Enter a registered email address ending in gov.uk or skip this step.",
-		"lineManagerMissing": "Line manager email address not found. \n\n Enter a registered email address or skip this step.",
+		"lineManagerMissing": "Line manager email address not found. \n\n Enter a registered email address or select continue to skip this step.",
 		"lineManagerIsUser": "You may not be your own line manager",
 		"po-empty": "Enter a purchase order number",
 		"po-too-short": "A purchase order number must be longer than 2 characters",
